--- a/app/src/main/res/layout/content_crop_sales_order_preview.xml
+++ b/app/src/main/res/layout/content_crop_sales_order_preview.xml
@@ -32,11 +32,15 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Karlin Farms"/>
+                        android:text="Karlin Farms"
+                        android:textSize="12sp"
+                        android:textColor="@color/textColor"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Namungona"/>
+                        android:text="Namungona"
+                        android:textSize="12sp"
+                        android:textColor="@color/textColor"/>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -44,11 +48,15 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Kampala"/>
+                            android:text="Kampala"
+                            android:textSize="12sp"
+                            android:textColor="@color/textColor"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Uganda"/>
+                            android:text="Uganda"
+                            android:textSize="12sp"
+                            android:textColor="@color/textColor"/>
 
                     </LinearLayout>
                     <LinearLayout
@@ -64,20 +72,33 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textStyle="bold"
-                                android:text="Estimate"/>
+                                android:text="Estimate"
+                                android:textSize="12sp"
+                                android:textColor="@color/textColor"
+                                />
 
                             <TextView
                                 android:id="@+id/text_view_crop_invoice_estimate_number"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textStyle="bold"
+                                android:textSize="12sp"
+                                android:textColor="@color/textColor"
                                 android:text="#EST-0001"/>
                         </LinearLayout>
 
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="BILL TO"
+                android:textColor="@color/textColor"
+                />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="8dp"
+                android:background="@color/divider_line_color_estimates"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -91,28 +112,30 @@
                     android:layout_weight="1"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Bill To" />
 
                     <TextView
                         android:id="@+id/text_view_invoice_summary_customer_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Tusiime Georgia" />
+                        android:text="Tusiime Georgia"
+                        android:textSize="12sp"
+                        android:textColor="@color/textColor"/>
 
                     <TextView
                         android:id="@+id/text_view_invoice_summary_customer_company"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Kleiner Parkers Farm" />
+                        android:text="Kleiner Parkers Farm"
+                        android:textSize="12sp"
+                        android:textColor="@color/textColor"/>
 
                     <TextView
                         android:id="@+id/text_view_invoice_summary_customer_street"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Nevada City" />
+                        android:text="Nevada City"
+                        android:textSize="12sp"
+                        android:textColor="@color/textColor"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -123,7 +146,9 @@
                             android:id="@+id/text_view_invoice_summary_city_country"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Karlin Farms" />
+                            android:text="Karlin Farms"
+                            android:textSize="12sp"
+                            android:textColor="@color/textColor"/>
 
                     </LinearLayout>
 
@@ -140,13 +165,6 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
-                        <TextView
-
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Karlin Farms"
-                            android:visibility="invisible" />
-
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -156,14 +174,18 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Estimate Date :" />
+                                android:text="Estimate Date :"
+                                android:textSize="12sp"
+                                android:textColor="@color/textColor"/>
 
                             <TextView
                                 android:id="@+id/text_view_crop_invoice_estimate_summary_date"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="08-03-2019" />
+                                android:text="08-03-2019"
+                                android:textSize="12sp"
+                                android:textColor="@color/textColor"/>
                         </LinearLayout>
 
                         <LinearLayout
@@ -175,7 +197,9 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="@string/invoice_due_date" />
+                                android:text="@string/invoice_due_date"
+                                android:textSize="12sp"
+                                android:textColor="@color/textColor"/>
 
                             <TextView
                                 android:id="@+id/text_view_crop_invoice_due_date"
@@ -183,7 +207,9 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
 
-                                android:text="" />
+                                android:text=""
+                                android:textSize="12sp"
+                                android:textColor="@color/textColor"/>
                         </LinearLayout>
 
                         <LinearLayout
@@ -195,14 +221,18 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Ref # :" />
+                                android:text="Ref # :"
+                                android:textSize="12sp"
+                                android:textColor="@color/textColor"/>
 
                             <TextView
                                 android:id="@+id/text_view_crop_invoice_order_number"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="" />
+                                android:text=""
+                                android:textSize="12sp"
+                                android:textColor="@color/textColor"/>
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
@@ -241,8 +271,9 @@
                                 android:background="@drawable/crop_invoice_table_border"
                                 android:gravity="center"
                                 android:text="#"
-                                android:textSize="14sp"
-                                android:textStyle="bold" />
+                                android:textSize="12sp"
+                                android:textColor="@color/textColor"
+                                 />
                         </LinearLayout>
 
                         <LinearLayout
@@ -259,7 +290,7 @@
                                 android:gravity="center"
                                 android:text="@string/item_details_label"
                                 android:textSize="14sp"
-                                android:textStyle="bold" />
+                                 />
                         </LinearLayout>
 
                         <LinearLayout
@@ -275,8 +306,9 @@
                                 android:background="@drawable/crop_invoice_table_border"
                                 android:gravity="center"
                                 android:text="@string/quantity"
-                                android:textSize="16sp"
-                                android:textStyle="bold" />
+                                android:textSize="12sp"
+                                android:textColor="@color/textColor"
+                                 />
                         </LinearLayout>
 
                         <LinearLayout
@@ -292,8 +324,9 @@
                                 android:background="@drawable/crop_invoice_table_border"
                                 android:gravity="center"
                                 android:text="@string/rate"
-                                android:textSize="16sp"
-                                android:textStyle="bold" />
+                                android:textSize="12sp"
+                                android:textColor="@color/textColor"
+                                 />
                         </LinearLayout>
 
                         <LinearLayout
@@ -309,8 +342,9 @@
                                 android:background="@drawable/crop_invoice_table_border"
                                 android:gravity="center"
                                 android:text="@string/label_tax"
-                                android:textSize="16sp"
-                                android:textStyle="bold" />
+                                android:textSize="12sp"
+                                android:textColor="@color/textColor"
+                                 />
                         </LinearLayout>
 
                         <LinearLayout
@@ -326,8 +360,9 @@
                                 android:background="@drawable/crop_invoice_table_border"
                                 android:gravity="center"
                                 android:text="@string/amount_label"
-                                android:textSize="16sp"
-                                android:textStyle="bold" />
+                                android:textSize="12sp"
+                                android:textColor="@color/textColor"
+                                 />
                         </LinearLayout>
 
 
@@ -362,9 +397,9 @@
                         android:layout_marginRight="40dp"
                         android:text="@string/sub_total"
 
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="12sp"
+                         />
 
                     <TextView
 
@@ -390,9 +425,9 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="65dp"
                         android:text="@string/discount"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="12sp"
+                         />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -429,9 +464,9 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="5dp"
                         android:text="@string/shipping_charges"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="12sp"
+                         />
 
 
 
@@ -451,33 +486,34 @@
                     </LinearLayout>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:orientation="horizontal"
+                android:layout_weight="0.5"
+                >
+                <TextView
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/input_shapes"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:text="@string/total_ugx"
+                    android:text="@string/total_ugx"
 
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                    android:textColor="@color/textColor"
+                    android:textSize="12sp"
+                    android:layout_weight="0.4"
+                    />
 
-                    <TextView
+                <TextView
 
-                        android:id="@+id/txt_view_crop_estimate_total"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="end"
-                        android:text="@string/default_numeric_value" />
-
-                </LinearLayout>
-
-
-
+                    android:id="@+id/txt_view_crop_estimate_total"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:layout_weight="0.6"
+                    android:textSize="12sp"
+                    android:textColor="@color/textColor"
+                    android:text="@string/default_numeric_value" />
             </LinearLayout>
 
             <TextView
@@ -485,9 +521,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:text="@string/looking_forward_for_your_business" />
+                android:text="@string/looking_forward_for_your_business"
+                android:textSize="12sp"
+                android:textColor="@color/textColor"/>
 
 
         </LinearLayout>
