--- a/app/src/main/res/layout/activity_crop_employees_list.xml
+++ b/app/src/main/res/layout/activity_crop_employees_list.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="4dp"
+        android:background="@color/light_gray"
         >
 
     </android.support.v7.widget.RecyclerView>
